fix(richtext-lexical): fixed toolbar spacing should not trickly down to sub-editor-contenteditables as they may not have a fixed toolbar

--- a/packages/richtext-lexical/src/field/features/toolbars/fixed/Toolbar/index.scss
+++ b/packages/richtext-lexical/src/field/features/toolbars/fixed/Toolbar/index.scss
@@ -83,9 +83,7 @@ html[data-theme='dark'] {
     }
   }
 
-  + .editor-scroller {
-    .ContentEditable__root {
+  + .editor-scroller > .editor > .ContentEditable__root {
       padding-top: calc(var(--base) * 1.25);
-    }
   }
 }
